# clauditor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  TASK.md  TODO.md
.github/scripts/: check-line-counts.sh
.github/workflows/: ci.yml  release.yml
examples/: performance_stress_test.rs  performance_test.rs  test_burn_rate_colors.rs  test_colored_header.rs  test_dynamic_alignment.rs  test_multiple_windows.rs  test_time_colors.rs
src/: coordinator.rs  display.rs  lib.rs  main.rs  parser.rs  position_tracker.rs  scanner.rs  types.rs  watcher.rs  window.rs
test_data/: edge_cases.jsonl  malformed_only.jsonl  multiple_active_sessions.jsonl  multiple_windows_with_gaps.jsonl  overlapping_active_windows.jsonl  overlapping_sessions.jsonl  sample.jsonl  single_session_continuous.jsonl
tests/: integration_test.rs
