[package]
name = "clauditor"
version = "0.1.0"
edition = "2021"

[lib]
name = "clauditor"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ctrlc = "3"
clap = { version = "4", features = ["derive"] }
notify = "6"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
